[workspace]
members = [
  "bindings/core_node",
  "bindings/core_wasm",
  "crates/arrowcss",
  "crates/arrowcss_css_macro",
  "crates/arrowcss_extractor",
  "crates/arrowcss_cli",
]
resolver = "2"

[profile.release]
lto           = true
codegen-units = 1

[profile.bench]
debug = true

[profile.dev.build-override]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
arrowcss           = { path = "crates/arrowcss" }
arrowcss_css_macro = { path = "crates/arrowcss_css_macro" }
arrowcss_extractor = { path = "crates/arrowcss_extractor" }

rayon                    = "1.10.0"
either                   = "1.10.0"
enum_dispatch            = "0.3.13"
phf                      = { version = "0.11.2" }
colored                  = "2.1.0"
cssparser-macros         = "0.6.1"
smol_str                 = { version = "0.2.1" }
anyhow                   = "1.0.75"
cssparser                = "0.33.0"
lazy_static              = "1.4.0"
lightningcss             = { version = "1.0.0-alpha.55" }
serde                    = "1.0.193"
serde_json               = "1.0.108"
smallvec                 = { version = "1.11.2" }
config                   = "0.13.4"
clap                     = { version = "4.5.4" }
notify                   = "6.1.1"
notify-debouncer-mini    = "0.4.1"
walkdir                  = "2.5.0"
criterion                = { version = "0.4" }
proc-macro2              = "1.0.79"
quote                    = "1.0.35"
syn                      = "2.0.57"
rustc-hash               = "1.1.0"
napi                     = { version = "2.12.2", default-features = false }
napi-derive              = "2.12.2"
napi-build               = "2.0.1"
wasm-bindgen             = "0.2.92"
console_error_panic_hook = "0.1.7"
memchr                   = "2.7.2"
dotenv                   = "0.15.0"
thiserror                = "1.0.60"
