[package]
edition = "2021"
name = "binding_core_node"
version = "0.0.0"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
arrowcss = { version = "0.1.0", path = "../../crates/arrowcss" }

[build-dependencies]
napi-build = "2.0.1"

# [profile.release]
# lto = true
