[package]
edition = "2021"
name    = "binding_cli"
version = "0.0.1-alpha.1"
build   = "build.rs"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
rswind           = { workspace = true }
rswind_extractor = { workspace = true }
rswind_cli       = { workspace = true }

napi        = { workspace = true, features = ["napi4"] }
napi-derive = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }

# [profile.release]
# lto = true
