[package]
edition = "2021"
name = "binding_cli"
version = "0.0.1-alpha.1"
build = "build.rs"
license = "MIT"
publish = false

[lib]
crate-type = [ "cdylib" ]

[dependencies]
rswind_cli = { workspace = true }
napi-derive = { workspace = true }
napi = { workspace = true, features = [ "napi4" ] }

[build-dependencies]
napi-build = { workspace = true }

# [profile.release]
# lto = true
