[package]
edition = "2021"
name    = "binding_core_node"
version = "0.0.0"
build   = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
rswind           = { workspace = true }
rswind_extractor = { workspace = true }

napi        = { workspace = true, features = ["napi4"] }
napi-derive = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }

# [profile.release]
# lto = true
