[package]
edition = "2021"
name    = "binding_core_node"
version = "0.0.0"
build   = "build.rs"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
rswind           = { workspace = true }
rswind_extractor = { workspace = true }

serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
napi               = { workspace = true, features = ["napi9", "serde-json"] }
napi-derive        = { workspace = true }
scopefn            = "0.0.2"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[build-dependencies]
napi-build = { workspace = true }

# [profile.release]
# lto = true
