[package]
edition = "2021"
name = "binding_core_node"
version = "0.0.1-alpha.1"
build = "build.rs"
license = "MIT"
publish = false

[lib]
crate-type = [ "cdylib" ]

[dependencies]
rswind = { workspace = true, features = [ "napi" ] }
rswind_extractor = { workspace = true }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
napi = { workspace = true, features = [
  "napi9",
  "serde-json"
] }
napi-derive = { workspace = true, features = [ "type-def" ] }
tracing-subscriber = { version = "0.3.18", features = [ "env-filter" ] }

[build-dependencies]
napi-build = { workspace = true }

# [profile.release]
# lto = true
