[package]
name    = "arrowcss_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
arrowcss = { workspace = true }

config                = { workspace = true }
clap                  = { workspace = true, features = ["derive"] }
cssparser             = { workspace = true }
notify                = { workspace = true }
notify-debouncer-mini = { workspace = true }
rayon                 = { workspace = true }
walkdir               = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
