[package]
name    = "arrowcss_cli"
version = "0.1.0"
edition = "2021"

[lib]
bench = true

[features]
bench = []

[dependencies]
arrowcss           = { workspace = true }
arrowcss_extractor = { workspace = true }

config                = { workspace = true }
clap                  = { workspace = true, features = ["derive"] }
cssparser             = { workspace = true }
notify                = { workspace = true }
notify-debouncer-mini = { workspace = true }
rayon                 = { workspace = true }
walkdir               = { workspace = true }
rustc-hash            = { workspace = true }
smol_str              = { workspace = true }
tracing               = { workspace = true }
tracing-subscriber    = { workspace = true }
notify-debouncer-full = "0.3.1"

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
dotenv    = { workspace = true }

[[bench]]
name    = "multiple_files"
harness = false
