[package]
name    = "rswind"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
json_schema = []
wasm        = []

[dependencies]
rswind_css_macro = { workspace = true }
rswind_extractor = { workspace = true }
rswind_common    = { workspace = true }

rayon              = { workspace = true }
either             = { workspace = true, features = ["serde"] }
enum_dispatch      = { workspace = true }
phf                = { workspace = true, features = ["macros"] }
colored            = { workspace = true }
cssparser-macros   = { workspace = true }
smol_str           = { workspace = true, features = ["serde"] }
anyhow             = { workspace = true }
cssparser          = { workspace = true }
lazy_static        = { workspace = true }
lightningcss       = { workspace = true, features = ["into_owned"] }
serde              = { workspace = true }
serde_json         = { workspace = true }
smallvec           = { workspace = true, features = ["const_generics", "serde"] }
rustc-hash         = { workspace = true }
memchr             = { workspace = true }
config             = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
js-sys             = { workspace = true }
serde-wasm-bindgen = { workspace = true }
napi               = { workspace = true, features = ["napi9"] }
napi-derive        = { workspace = true }
derive_more        = "0.99.17"
scopefn            = { version = "0.0.1", features = ["run_if"] }
walkdir            = { workspace = true }

globset = { version = "0.4.14", default-features = false, features = [
    "simd-accel",
] }
wasm-bindgen = { version = "0.2.92", features = [
    "serde",
    "serde-serialize",
    "serde_json",
] }

schemars = { version = "1.0.0-alpha.1", features = [
    "smallvec1",
    "either1",
    "smol_str02",
] }

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
paste     = "1.0.15"

[lib]
bench = false

[[bench]]
name    = "parse"
harness = false

[[bench]]
name    = "load_rules"
harness = false
