[package]
name = "rswind"
version = "0.0.1-alpha.1"
authors.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

[features]
napi = [ "rswind_core/napi" ]
wasm = [ "rswind_core/wasm" ]

[dependencies]
rswind_core.workspace = true
rswind_css.workspace = true

phf = { workspace = true, features = [ "macros" ] }
tracing.workspace = true
smol_str.workspace = true
instance_code.workspace = true
rustc-hash.workspace = true
lightningcss.workspace = true
tracing-subscriber = { workspace = true, features = [ "env-filter" ] }

[dev-dependencies]
criterion = { workspace = true, features = [ "html_reports" ] }
paste = "1.0.15"
serde_json.workspace = true
either.workspace = true

[build-dependencies]
instance_code.workspace = true
rswind_theme.workspace = true
rswind_core = { workspace = true, features = [ "build" ] }

[lib]
bench = false

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "load_rules"
harness = false
