[package]
name    = "rswind_cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors.workspace      = true
description.workspace  = true
homepage.workspace     = true
keywords.workspace     = true
repository.workspace   = true
rust-version.workspace = true
categories.workspace   = true

[lib]
bench = true

[features]
bench = []

[dependencies]
rswind           = { workspace = true }
rswind_extractor = { workspace = true }

config                = { workspace = true }
clap                  = { workspace = true, features = ["derive"] }
cssparser             = { workspace = true }
notify                = { workspace = true }
rayon                 = { workspace = true }
walkdir               = { workspace = true }
rustc-hash            = { workspace = true }
smol_str              = { workspace = true }
tracing               = { workspace = true }
tracing-subscriber    = { workspace = true, features = ["env-filter"] }
notify-debouncer-full = "0.3.1"
thiserror             = { workspace = true }
colored               = { workspace = true }

globset = { version = "0.4.14", default-features = false, features = [
    "serde",
    "simd-accel",
] }

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
dotenvy   = { workspace = true }

[[bench]]
name    = "multiple_files"
harness = false
