[package]
name = "rswind_cli"
version = "0.0.1-alpha.1"
authors.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

[lib]
bench = true

[features]
bench = []

[dependencies]
rswind.workspace = true
rswind_css.workspace = true
rswind_extractor.workspace = true

clap = { workspace = true, features = [ "derive" ] }
notify.workspace = true
rayon.workspace = true
rustc-hash.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = [ "env-filter" ] }
notify-debouncer-full = "0.3.1"
colored.workspace = true

[dev-dependencies]
criterion = { workspace = true, features = [ "html_reports" ] }
tempfile = "3.10.1"
assert_fs = "1.1.1"
assert_cmd = { version = "2.0.14", features = [ "color" ] }

[[bench]]
name = "multiple_files"
harness = false
