[package]
name    = "rswind_common"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors.workspace      = true
description.workspace  = true
homepage.workspace     = true
keywords.workspace     = true
repository.workspace   = true
rust-version.workspace = true
categories.workspace   = true

[lib]

[dependencies]
rayon   = { workspace = true }
either  = { workspace = true }
smol_str = { workspace = true }
