[package]
name                  = "rswind_common"
version               = "0.0.0"
authors.workspace     = true
description.workspace = true
edition.workspace     = true
keywords.workspace    = true
license.workspace     = true
repository.workspace  = true
categories.workspace  = true

[lib]

[dependencies]
rayon    = { workspace = true }
either   = { workspace = true }
smol_str = { workspace = true }
