[package]
name                  = "rswind_css_macro"
version               = "0.1.0"
authors.workspace     = true
description.workspace = true
edition.workspace     = true
keywords.workspace    = true
license.workspace     = true
repository.workspace  = true
categories.workspace  = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote       = { workspace = true }
syn         = { workspace = true }
