[package]
name = "rswind_extractor"
version = "0.0.1-alpha.1"
authors.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

[lib]

[dependencies]
rswind_common = { workspace = true }
cssparser-macros = { workspace = true }
cssparser = { workspace = true }
rustc-hash = { workspace = true }
memchr = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = [ "html_reports" ] }

[[bench]]
name = "html_extract"
harness = false

[[bench]]
name = "css_extract"
harness = false
